--- a/src/asset/global.css
+++ b/src/asset/global.css
@@ -991,7 +991,7 @@ new
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), url() fixed center center;
+  background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
